--- a/style.css
+++ b/style.css
@@ -1,83 +1,147 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700;800;900&display=swap');
+
+
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-
+    font-family: 'Poppins', sans-serif;
 }
 
 section {
+    position: relative;
+    width: 100%;
+    height: 100vh;
+    background: radial-gradient(#333,#000);
+    overflow: hidden;
     display: flex;
     justify-content: center;
     align-items: center;
-    min-height: 100vh;
-    background: #042104;
-    animation: animateBg 10s linear infinite;
+}
+section h2 {
+    color: #fff;
+    font-size: 6em;
+    text-transform: uppercase;
+    margin-top: 20%;
 
 }
-@keyframes animateBg {
+section .set {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    pointer-events: none;
+}
+section .set div {
+    position: absolute;
+    display: block;
+
+}
+
+section .set div:nth-child(1) {
+    left: 20%;
+    animation: animate 15s linear infinite;
+    animation-delay: -7s;
+}
+
+section .set div:nth-child(2) {
+    left: 50%;
+    animation: animate 20s linear infinite;
+    animation-delay: -5s;
+}
+
+section .set div:nth-child(3) {
+    left: 70%;
+    animation: animate 20s linear infinite;
+    animation-delay: 0s;
+} 
+
+section .set div:nth-child(4) {
+    left: 0%;
+    animation: animate 15s linear infinite;
+    animation-delay: -5s;
+}
+
+section .set div:nth-child(5) {
+    left: 85%;
+    animation: animate 18s linear infinite;
+    animation-delay: -10s;
+}
+
+section .set div:nth-child(6) {
+    left: 0%;
+    animation: animate 12s linear infinite;
+    
+}
+
+section .set div:nth-child(7) {
+    left: 15%;
+    animation: animate 14s linear infinite;
+    
+}
+
+section .set div:nth-child(8) {
+    left: 60%;
+    animation: animate 15s linear infinite;
+    
+}
+@keyframes animate {
     0%
     {
-       filter:hue-rotate(0deg);
+        opacity: 0;
+        top: -10%;
+        transform: translateX(20px) rotate(0deg);
+    }
 
+    10%
+    {
+        opacity: 1;
+    }
+
+    20%
+    {
+        
+        transform: translateX(-20px) rotate(45deg);
+    }
+    40%
+    {
+        transform: translateX(-20px) rotate(90deg);
+    }
+
+    60%
+    {
+        transform: translateX(20px) rotate(180deg);
+    }
+
+    80%
+    {
+        transform: translateX(-20px) rotate(180deg);
     }
 
     100%
     {
-       filter:hue-rotate(360deg);
-
-    }
-}
-section .loader {
-    position: relative;
-    width: 120px;
-    height: 120px;
-}
-
-section .loader span {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    transform: rotate(calc(18deg * var(--i)));
-
-
-}
-section .loader span::before {
-    content: '';
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 15px;
-    height: 15px;
-    border-radius: 50%;
-
-    background: #00ff0a;
-    box-shadow:  0 0 10px #00ff0a,
-                 0 0 20px #00ff0a,
-                 0 0 40px #00ff0a,
-                 0 0 60px #00ff0a,
-                 0 0 80px #00ff0a,
-                 0 0 100px #00ff0a;
-    animation : animate 2s linear infinite; 
-    animation-delay: calc(0.1s * var(--i));
-
-
-
-}
-
-@keyframes animate {
-    0%
-    {
-    transform: scale(1);
-    }
-
-    80%, 100%
-    {
-    transform: scale(0);
+        top: 110%;
+        transform: translateX(-20px) rotate(225deg);
     }
 }
 
+.set2 {
+    transform: scale(2) rotateY(180deg);
+    filter: blur(2px);
 
 
+}
 
+.set3 {
+    transform: scale(0.8) rotateX(180deg);
+    filter: blur(4px);
+    
+
+}
+
+
+.audio {
+    margin-left: 38.5% ;
+    
+}
